# kessel-sabacc

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  RULES.md
crates/sabacc-cli/: Cargo.toml
crates/sabacc-cli/src/: animation.rs  app.rs  events.rs  main.rs  ui.rs
crates/sabacc-cli/src/widgets/: actions.rs  card.rs  hand.rs  header.rs  log.rs  mod.rs  players.rs  results.rs  starfield.rs  table.rs
crates/sabacc-core/: Cargo.toml
crates/sabacc-core/src/: bot.rs  card.rs  deck.rs  error.rs  game.rs  hand.rs  lib.rs  player.rs  round.rs  scoring.rs  shift_token.rs  stats.rs  turn.rs
crates/sabacc-core/tests/: elimination_scenarios.rs  full_game.rs  impostor_flow.rs  modifier_interactions.rs  shift_token_tests.rs  stats_tracking.rs
crates/sabacc-wasm/: Cargo.toml
crates/sabacc-wasm/src/: lib.rs
docs/superpowers/plans/: 2026-03-17-tui-layout-v2.md  2026-03-19-game-stats.md
docs/superpowers/specs/: 2026-03-17-tui-design.md  2026-03-17-tui-layout-v2.md  2026-03-18-round-announcement-progressbar-design.md  2026-03-19-game-stats-design.md
web/: .gitignore  components.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/src/: App.tsx  globals.css  main.tsx
web/src/components/: ColorButton.tsx  DecryptHeader.tsx  DecryptSection.tsx  Layout.tsx  MuteButton.tsx  StarWarsCrawl.tsx  Starfield.tsx
web/src/hooks/: useDecryptEngine.ts
web/src/lib/: audio-store.ts  audio.ts  game-store.ts  wasm.ts
web/src/pages/: Credits.tsx  Game.tsx  HowToPlay.tsx  Intro.tsx  MainMenu.tsx  Setup.tsx
(+1 files in other folders)
