[package]
name = "sabacc-wasm"
version.workspace = true
edition = "2021"
description = "WebAssembly bindings for Kessel Sabacc"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sabacc-core = { path = "../sabacc-core" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
